Basic dagger configuration and added dependencies

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pedroza.blogreader" >
+    package="com.pedroza.blogreader">
 
     <application
+        android:name=".BlogReaderApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".BlogEntriesActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".view.BlogEntriesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
